projects/project_mockup_holy_grail.css
* {
  margin: 0;
  padding: 0;
}

.container {
  display: grid;
  text-align: center;
  grid-template-columns: 1fr 3fr;
  grid-template-rows: 1fr 1/2fr 5fr 1fr;
  gap: 4px;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  background-color: #393f4d;
  grid-column: 1 / 3;
  display: grid;
  grid-template-columns: 1fr 3fr;
}

.logo {
  grid-column: 1 / 2;
}

.menu {
  grid-column: 2 / 3;
}

.menu ul {
  list-style: none;
  font-size: 16px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}

.sidebar {
  background-color: #C50208;
  grid-column: 1 / 2;
  grid-row: 2 / 4;
  gap: 50px;
  display: grid;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.nav {
  background-color: #C50208;
  grid-column: 2 / 3;
}

.nav ul {
  list-style: none;
  font-size: 16px;
  text-transform: uppercase;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.article {
  background-color: #bccbde;
  grid-column: 2 / 3;
  gap: 15px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
  height: 170px;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
  grid-column: 1 / 3;
}

.footer p {
  font-size: 13px;
  font-weight: normal;
}

